fixed layout issue with dependencies

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,11 @@ header .hero .actions button {
 
 #dependencies .partners {
 	margin: 0;
+	margin-right: 40px;
+}
+
+#dependencies .partners:last-child {
+	margin-right: 0;
 }
 
 #dependencies .partners p {
